Removed v3 from index.html heading

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <!-- Main content -->
     <section class="content">
       <article class="markdown-section" id="main">
-        <h2>FootNet: machine learning emulator of atmospheric transport <small>v3.x</small></h2>
+        <h2>FootNet: machine learning emulator of atmospheric transport</h2>
         <p>FootNet is a deep learning emulator of atmospheric transport based on a U-Net++ architecture. 
           It generates source-receptor relationships (footprints) for both surface and column-averaged measurements at a kilometer resolution, 
           operating hundreds of times faster than traditional Lagrangian models. FootNet consists of two separate models, one for surface
