fix: made the left side bar uniform across all the webpages by adding styles.css file.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <!-- Favicon -->
   <link rel="shortcut icon" href="https://github.com/nd349/FootNet.ico" type="image/x-icon">
   <link rel="stylesheet" href="./FootNet_files/prism.css">
+  <link rel="stylesheet" href="./FootNet_files/styles.css">
 
   <!-- Inline CSS -->
   <style>
