--- a/training.html
+++ b/training.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="https://github.com/nd349/FootNet.ico" type="image/x-icon">
   <link rel="stylesheet" href="./FootNet_files/prism.css">
+  <link rel="stylesheet" href="./FootNet_files/styles.css">
   <style>
     body { margin: 0; font-family: Arial, sans-serif; color: #333; }
     main.layout { display: flex; flex-direction: row; }
@@ -18,7 +19,7 @@
     .sidebar-nav li { margin: 5px 0; }
     .sidebar-nav a { text-decoration: none; color: #0066cc; }
     .sidebar-footer { margin-top: 20px; font-size: 12px; color: #555; }
-    .content { flex: 1; padding: 30px; margin-left: 160px; margin-right: 80px; max-width: 1500px; }
+  .content { flex: 1; padding: 30px; max-width: 1500px; }
   </style>
 </head>
 <body>
