feat: added about, resources, and people pages

--- a/output-files.html
+++ b/output-files.html
@@ -63,6 +63,13 @@
               <li><a href="model-weights.html" title="Model weights">Model weights</a></li>
             </ul>
           </li>
+          <li><p>About</p>
+            <ul>
+              <li><a href="about.html" title="About us">About us</a></li>
+              <li><a href="people.html" title="People">People</a></li>
+              <li><a href="resources.html" title="Resources">Resources</a></li>
+            </ul>
+          </li>
         </ul>
         <div class="sidebar-footer text-bold"><small>© 2025 FootNet Developers</small></div>
       </div>
