--- a/about.html
+++ b/about.html
@@ -2,24 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>FootNet — Training</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="description" content="Training FootNet: datasets and hyperparameters">
+  <title>FootNet — About us</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="https://github.com/nd349/FootNet.ico" type="image/x-icon">
   <link rel="stylesheet" href="./FootNet_files/prism.css">
   <link rel="stylesheet" href="./FootNet_files/styles.css">
-  <style>
-    body { margin: 0; font-family: Arial, sans-serif; color: #333; }
-    main.layout { display: flex; flex-direction: row; }
-    .sidebar { width: 200px; background: #f9f9f9; border-right: 1px solid #ddd; padding: 16px; position: sticky; top: 0; }
-    .app-name { margin: 0 0 14px 0; font-size: 18px; }
-    .app-name-link { text-decoration: none; color: #222; }
-    .sidebar-nav ul { list-style: none; padding-left: 10px; }
-    .sidebar-nav li { margin: 5px 0; }
-    .sidebar-nav a { text-decoration: none; color: #0066cc; }
-    .sidebar-footer { margin-top: 20px; font-size: 12px; color: #555; }
-  .content { flex: 1; padding: 30px; max-width: 1500px; }
+  <style>/* minimal page-specific styles (kept small since shared styles handle layout) */
+    body{ margin:0; }
   </style>
 </head>
 <body>
@@ -33,7 +22,7 @@
 
   <main class="layout">
     <aside class="sidebar">
-  <h1 class="app-name"><a class="app-name-link" href="index.html"><span class="color-primary text-bold">FootNet</span> Project</a></h1>
+      <h1 class="app-name"><a class="app-name-link" href="index.html"><span class="color-primary text-bold">FootNet</span> Project</a></h1>
       <div class="sidebar-nav">
         <ul>
           <li><p>Getting started</p>
@@ -69,29 +58,19 @@
 
     <section class="content">
       <article class="markdown-section">
-        <h2>Training FootNet</h2>
-        <p>We trained the FootNet models on 500,000 examples across the entire Contiguous United States. 
-          The training data consists of more than 20 TB of space, and as such is not feasible with traditional 
-          deep learning model training methods.</p>
+        <h2>About FootNet</h2>
+        <p>FootNet is a state-of-the-art deep learning emulator designed to replicate atmospheric transport processes that relate greenhouse gas (GHG) emissions at the surface to their atmospheric observations. Built on a U-Net++ architecture, FootNet learns the complex, physics-informed relationships between meteorology and atmospheric motion, allowing it to generate source-receptor relationships or “footprints” at kilometer-scale resolution. The model operates over 650 times faster than traditional full-physics Lagrangian models like STILT and X-STILT, enabling rapid, scalable simulations of GHG transport across the contiguous United States. By reducing computational demands while preserving scientific accuracy, FootNet makes high-resolution flux inversion frameworks more accessible and efficient for both research and operational applications.</p>
 
-        <p>We used <a href="https://docs.pytorch.org/docs/stable/generated/torch.nn.parallel.DistributedDataParallel.html" target="_blank" rel="noopener">PyTorch's Distributed Data Parallel (DDP)</a> library to conduct distributed training over 10-15 machines synchronously.</p>
-        <p>Below are the scripts that we used to train Surface FootNet and Column FootNet models using distributed learning.</p>
-        <ul>
-          <li><a href="https://github.com/nd349/FootNet/blob/main/training/SurfaceFootNet_multinode_training.py" target="_blank" rel="noopener">Surface FootNet training</a></li>
-          <li><a href="https://github.com/nd349/FootNet/blob/main/training/ColumnFootNet_multinode_training.py" target="_blank" rel="noopener">Column FootNet training</a></li>
-        </ul>
-        <p>These scripts can be used as a reference to fine-tune FootNet models or train a new FootNet model from scratch.</p>
+        <h3>Vision</h3>
+        <p>FootNet was created to make atmospheric transport modeling faster, easier, and scalable for anyone studying greenhouse gas emissions. It has been trained on over 500,000 examples across the United States, allowing it to work accurately even in new regions and weather conditions it hasn’t seen before. Whether you are estimating methane emissions from an oil and gas basin or studying urban CO₂ trends, FootNet helps you generate footprints in seconds instead of hours. Our goal is to help researchers, students, and policymakers use state-of-the-art transport modeling without needing large computing resources — empowering more people to use data-driven approaches to understand and reduce greenhouse gas emissions.</p>
+        
+        <figure class="figure" aria-label="Training Data">
+          <img src="./figures/training_data.png" alt="FootNet training data" loading="lazy">
+          <figcaption>Training data for FootNet models.</figcaption>
+        </figure>
 
-        <h3>Fine-tuning/Training checklist</h3>
-        <ul>
-          <li>Gather footprints</li>
-          <li>Gather corresponding meteorology data</li>
-          <li>Prepare feature-target pairs for training</li>
-          <li>Preprocess/transform the features</li>
-          <li>Train model and validate</li>
-          <li>Save model</li>
-        </ul>
-        <p>For more information regarding training or fine-tuning, feel free to reach out to <a href="mailto:turneraj@uw.edu">turneraj@uw.edu</a> or <a href="mailto:nd349@uw.edu">nd349@uw.edu</a>.</p>
+        <h3>Contact</h3>
+        <p>For questions about the project or collaboration inquiries, please email <a href="mailto:turneraj@uw.edu">turneraj@uw.edu</a> or <a href="mailto:nd349@uw.edu">nd349@uw.edu</a>.</p>
       </article>
     </section>
   </main>
