fix: updated the references in resources.html

--- a/resources.html
+++ b/resources.html
@@ -73,23 +73,20 @@
 
         <h2>References</h2>
 
-        <h3><a href="https://egusphere.copernicus.org/preprints/2025/egusphere-2025-3441/" target="_blank" rel="noopener">FootNet v3.0 Paper: Dadheech and Turner (2025; under review)</a></h3>
-        <p>Cite as:</p>
-        <p>Dadheech, N., and Turner A.J. (2025),
-             Simulating out-of-sample atmospheric transport to enable flux inversions.
-            <i>EGUsphere, 2025</i> 1-20.
+        <p>Dadheech, N. and Turner, A. J. (under review) Simulating out-of-sample atmospheric transport to enable flux inversions, 
+            EGUsphere [preprint], <a href="https://egusphere.copernicus.org/preprints/2025/egusphere-2025-3441/" 
+            target="_blank" rel="noopener">https://doi.org/10.5194/egusphere-2025-3441</a></p>
 
-        <h3><a href="https://acp.copernicus.org/articles/25/5159/2025/" target="_blank" rel="noopener">FootNet v2.0 Paper: Dadheech et. al. (2025)</a></h3>
-        <p>Cite as:</p>
         <p>Dadheech, N.*, He T.*, and Turner A.J. (2025),
             High-resolution greenhouse gas flux inversions using a machine learning surrogate model for atmospheric transport,
-            <i>Atmospheric Chemistry and Physics</i>, <i>25 (10)</i>, 5159-5174, doi:10.5194/acp-25-5159-2025.</p>
+            <i>Atmospheric Chemistry and Physics</i>, <i>25 (10)</i>, 5159-5174, 
+            <a href="https://acp.copernicus.org/articles/25/5159/2025/" target="_blank" rel="noopener"> 
+                https://doi.org/10.5194/acp-25-5159-2025.</a></p>
         
-        <h3><a href="https://gmd.copernicus.org/articles/18/1661/2025/" target="_blank" rel="noopener">FootNet v1.0 Paper: He et. al. (2025)</a></h3>
-        <p>Cite as:</p>
         <p>He T.*, Dadheech, N.*, and Turner A.J. (2025),
-             FootNet v1. 0: development of a machine learning emulator of atmospheric transport. 
-            <i>Geoscientific Model Development</i>, <i>18 (5)</i>, 1661-1671,  doi:10.1021/gmd-18-1661-2025.</p>
+             FootNet v1. 0: development of a machine learning emulator of atmospheric transport. <i>Geoscientific Model Development</i>, 
+             <i>18 (5)</i>, 1661-1671, <a href="https://gmd.copernicus.org/articles/18/1661/2025/" target="_blank" rel="noopener">  
+                https://doi.org/10.1021/gmd-18-1661-2025.</a></p>
 
       </article>
     </section>
