Added footnet logo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="https://github.com/nd349/FootNet.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="https://footnet-uw.github.io/figures/logo.ico" type="image/x-icon">
+  <!-- Fallbacks and platform icons -->
+  <link rel="icon" href="./figures/logo.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" href="./figures/FootNet.png">
+  <link rel="apple-touch-icon" href="./figures/FootNet.png">
   <link rel="stylesheet" href="./FootNet_files/prism.css">
   <link rel="stylesheet" href="./FootNet_files/styles.css">
 
