--- a/configuration.html
+++ b/configuration.html
@@ -6,7 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="description" content="FootNet configuration options">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="https://github.com/nd349/FootNet.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./figures/logo.ico" type="image/x-icon">
+  <!-- Fallbacks and platform icons -->
+  <link rel="icon" href="./figures/logo.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" href="./figures/FootNet.png">
+  <link rel="apple-touch-icon" href="./figures/FootNet.png">
   <link rel="stylesheet" href="./FootNet_files/prism.css">
   <link rel="stylesheet" href="./FootNet_files/styles.css">
 
