Added footnet logo on the webpages

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>FootNet — About us</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="./figures/logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="https://footnet-uw.github.io/figures/figures/logo.ico" type="image/x-icon">
   <!-- Fallbacks and platform icons -->
   <link rel="icon" href="./figures/logo.ico" type="image/x-icon">
   <link rel="icon" type="image/png" href="./figures/FootNet.png">
@@ -26,7 +26,12 @@
 
   <main class="layout">
     <aside class="sidebar">
-      <h1 class="app-name"><a class="app-name-link" href="index.html"><span class="color-primary text-bold">FootNet</span> Project</a></h1>
+      <h1 class="app-name">
+        <div class="sidebar-logo">
+          <a href="index.html"><img src="./figures/FootNet.png" alt="FootNet logo"></a>
+          <a class="app-name-link app-name-text" href="index.html"><span class="color-primary text-bold">FootNet</span> Project</a>
+        </div>
+      </h1>
       <div class="sidebar-nav">
         <ul>
           <li><p>Getting started</p>
