--- a/index.html
+++ b/index.html
@@ -191,9 +191,10 @@
     <!-- Sidebar -->
     <aside class="sidebar">
       <h1 class="app-name">
-        <a class="app-name-link" href="index.html">
-          <span class="color-primary text-bold">FootNet</span> Project
-        </a>
+        <div class="sidebar-logo">
+          <a href="index.html"><img src="./figures/FootNet.png" alt="FootNet logo"></a>
+          <a class="app-name-link app-name-text" href="index.html"><span class="color-primary text-bold">FootNet</span> Project</a>
+        </div>
       </h1>
 
       <div class="sidebar-nav">
