--- a/quick-start.html
+++ b/quick-start.html
@@ -42,7 +42,12 @@
 
   <main class="layout">
     <aside class="sidebar">
-  <h1 class="app-name"><a class="app-name-link" href="index.html"><span class="color-primary text-bold">FootNet</span> Project</a></h1>
+      <h1 class="app-name">
+        <div class="sidebar-logo">
+          <a href="index.html"><img src="./figures/FootNet.png" alt="FootNet logo"></a>
+          <a class="app-name-link app-name-text" href="index.html"><span class="color-primary text-bold">FootNet</span> Project</a>
+        </div>
+      </h1>
       <div class="sidebar-nav">
         <ul>
           <li><p>Getting started</p>
