--- a/resources.html
+++ b/resources.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="https://footnet-uw.github.io/figures/logo.ico" type="image/x-icon">
   <!-- Fallbacks and platform icons -->
-  <link rel="icon" href="./figures/logo.ico" type="image/x-icon">
+  <link rel="icon" href="https://footnet-uw.github.io/figures/figures/logo.ico" type="image/x-icon">
   <link rel="icon" type="image/png" href="./figures/FootNet.png">
   <link rel="apple-touch-icon" href="./figures/FootNet.png">
   <link rel="stylesheet" href="./FootNet_files/prism.css">
@@ -24,7 +24,12 @@
 
   <main class="layout">
     <aside class="sidebar">
-      <h1 class="app-name"><a class="app-name-link" href="index.html"><span class="color-primary text-bold">FootNet</span> Project</a></h1>
+      <h1 class="app-name">
+        <div class="sidebar-logo">
+          <a href="index.html"><img src="./figures/FootNet.png" alt="FootNet logo"></a>
+          <a class="app-name-link app-name-text" href="index.html"><span class="color-primary text-bold">FootNet</span> Project</a>
+        </div>
+      </h1>
       <div class="sidebar-nav">
         <ul>
           <li><p>Getting started</p>
