--- a/output-files.html
+++ b/output-files.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="description" content="FootNet output file formats and examples">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="./figures/logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="https://footnet-uw.github.io/figures/figures/logo.ico" type="image/x-icon">
   <!-- Fallbacks and platform icons -->
   <link rel="icon" href="./figures/logo.ico" type="image/x-icon">
   <link rel="icon" type="image/png" href="./figures/FootNet.png">
@@ -45,7 +45,12 @@
 
   <main class="layout">
     <aside class="sidebar">
-  <h1 class="app-name"><a class="app-name-link" href="index.html"><span class="color-primary text-bold">FootNet</span> Project</a></h1>
+      <h1 class="app-name">
+        <div class="sidebar-logo">
+          <a href="index.html"><img src="./figures/FootNet.png" alt="FootNet logo"></a>
+          <a class="app-name-link app-name-text" href="index.html"><span class="color-primary text-bold">FootNet</span> Project</a>
+        </div>
+      </h1>
       <div class="sidebar-nav">
         <ul>
           <li><p>Getting started</p>
