--- a/configuration.html
+++ b/configuration.html
@@ -24,7 +24,7 @@
     .sidebar-nav li { margin: 5px 0; }
     .sidebar-nav a { text-decoration: none; color: #0066cc; }
     .sidebar-footer { margin-top: 20px; font-size: 12px; color: #555; }
-  .content { flex: 1; padding: 30px; max-width: 1500px; }
+  .content { flex: 1; padding: 30px; max-width: var(--max-content-width); box-sizing: border-box; }
     .markdown-section h2 { border-bottom: 1px solid #ddd; padding-bottom: 5px; }
     /* Code block styling for better visibility */
     pre, code { font-family: Menlo, Monaco, 'Courier New', monospace; }
@@ -47,7 +47,6 @@
   <h1 class="app-name">
     <div class="sidebar-logo">
       <a href="index.html"><img src="./figures/FootNet.png" alt="FootNet logo"></a>
-      <a class="app-name-link app-name-text" href="index.html"><span class="color-primary text-bold">FootNet</span> Project</a>
     </div>
   </h1>
       <div class="sidebar-nav">
