--- a/index.html
+++ b/index.html
@@ -4,199 +4,44 @@
   <meta charset="UTF-8">
   <title>FootNet Project</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="description" content="FootNet: A Deep Learning Emulator for Atmospheric Transport">
+  <meta name="description" content="Training FootNet: datasets and hyperparameters">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Favicon -->
-  <link rel="shortcut icon" href="https://footnet-uw.github.io/figures/logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="https://footnet-uw.github.io/figures/figures/logo.ico" type="image/x-icon">
   <!-- Fallbacks and platform icons -->
   <link rel="icon" href="./figures/logo.ico" type="image/x-icon">
   <link rel="icon" type="image/png" href="./figures/FootNet.png">
   <link rel="apple-touch-icon" href="./figures/FootNet.png">
   <link rel="stylesheet" href="./FootNet_files/prism.css">
   <link rel="stylesheet" href="./FootNet_files/styles.css">
-
-  <!-- Inline CSS -->
   <style>
-    /* Base styles */
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      color: #333;
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-    }
-
-    main.layout {
-      display: flex;
-      flex: 1;
-      flex-direction: row;
-      min-height: 100vh;
-    }
-
-    /* Sidebar */
-    .sidebar {
-      width: 200px;
-      background: #f9f9f9;
-      border-right: 1px solid #ddd;
-      padding: 16px;
-      position: sticky;
-      top: 0;
-      flex-shrink: 0;
-      height: 100vh;
-      overflow-y: auto;
-    }
-
-    .app-name {
-      margin: 0 0 14px 0;
-      font-size: 18px;
-    }
-
-    .app-name-link {
-      text-decoration: none;
-      color: #222;
-    }
-
-    .sidebar-nav ul {
-      list-style: none;
-      padding-left: 10px;
-    }
-
-    .sidebar-nav li {
-      margin: 5px 0;
-    }
-
-    .sidebar-nav a {
-      text-decoration: none;
-      color: #0066cc;
-    }
-
-    .sidebar-footer {
-      margin-top: 20px;
-      font-size: 12px;
-      color: #555;
-    }
-
-    /* Content */
-    .content {
-      flex: 1;
-      padding: 30px;
-      max-width: 1500px;
-      box-sizing: border-box;
-    }
-
-    .markdown-section h2 {
-      border-bottom: 1px solid #ddd;
-      padding-bottom: 5px;
-    }
-
-    .row {
-      display: flex;
-      align-items: center;
-      margin: 20px 0;
-      flex-wrap: wrap;
-    }
-
-    .row img {
-      margin-left: 20px;
-      border-radius: 10px;
-      width: 150px;
-      height: auto;
-    }
-
-    .figure {
-      margin-left: auto;
-      margin-right: auto;
-      max-width: 1000px;
-      width: 100%;
-      box-sizing: border-box;
-    }
-
-    .figure img {
-      display: block;
-      width: 100%;
-      height: auto;
-      border-radius: 10px;
-    }
-
-    .figure figcaption {
-      font-size: 15px;
-      color: #0a0606;
-      text-align: left;
-      margin-top: 10px;
-    }
-
-    .image-circle {
-      border-radius: 50%;
-    }
-
-    .markdown-section ul li {
-      margin: 10px 0;  /* vertical spacing for bullets */
-    }
-
-    .markdown-section ul ul li {
-      margin: 5px 0;
-    }
-
-    /* Responsive Sidebar */
-    @media (max-width: 900px) {
-      main.layout {
-        flex-direction: column;
-      }
-      .sidebar {
-        width: 100%;
-        height: auto;
-        position: relative;
-        border-right: none;
-        border-bottom: 1px solid #ddd;
-      }
-      .content {
-        margin: 0;
-        padding: 20px;
-      }
-    }
+    body { margin: 0; font-family: Arial, sans-serif; color: #333; }
+    main.layout { display: flex; flex-direction: row; }
+    .sidebar { width: 200px; background: #f9f9f9; border-right: 1px solid #ddd; padding: 16px; position: sticky; top: 0; }
+    .app-name { margin: 0 0 14px 0; font-size: 18px; }
+    .app-name-link { text-decoration: none; color: #222; }
+    .sidebar-nav ul { list-style: none; padding-left: 10px; }
+    .sidebar-nav li { margin: 5px 0; }
+    .sidebar-nav a { text-decoration: none; color: #0066cc; }
+    .sidebar-footer { margin-top: 20px; font-size: 12px; color: #555; }
+  .content { flex: 1; padding: 30px; max-width: var(--max-content-width); box-sizing: border-box; }
   </style>
 </head>
-
 <body>
-  <!-- GitHub corner -->
   <a href="https://github.com/nd349/FootNet" target="_blank" class="github-corner" aria-label="View source on Github">
     <svg viewBox="0 0 250 250" aria-hidden="true" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" width="80" height="80">
       <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
-      <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 
-               C122.0,82.7 120.5,78.6 120.5,78.6 
-               C119.2,72.0 123.4,76.3 123.4,76.3 
-               C127.3,80.9 125.5,87.3 125.5,87.3 
-               C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" 
-               style="transform-origin: 130px 106px;" class="octo-arm"></path>
-      <path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 
-               L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 
-               C133.8,88.0 127.5,74.4 143.8,58.0 
-               C148.5,53.4 154.0,51.2 159.7,51.0 
-               C160.3,49.4 163.2,43.6 171.4,40.1 
-               C171.4,40.1 176.1,42.5 178.8,56.2 
-               C183.1,58.6 187.2,61.8 190.9,65.4 
-               C194.5,69.0 197.7,73.2 200.1,77.6 
-               C213.8,80.2 216.3,84.9 216.3,84.9 
-               C212.7,93.1 206.9,96.0 205.4,96.6 
-               C205.1,102.4 203.0,107.8 198.3,112.5 
-               C181.9,128.9 168.3,122.5 157.7,114.1 
-               C157.9,116.9 156.7,120.9 152.7,124.9 
-               L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path>
+      <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
+      <path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path>
     </svg>
   </a>
 
   <main class="layout">
-    <!-- Sidebar -->
     <aside class="sidebar">
       <h1 class="app-name">
         <div class="sidebar-logo">
           <a href="index.html"><img src="./figures/FootNet.png" alt="FootNet logo"></a>
-          <a class="app-name-link app-name-text" href="index.html"><span class="color-primary text-bold">FootNet</span> Project</a>
         </div>
       </h1>
-
       <div class="sidebar-nav">
         <ul>
           <li><p>Getting started</p>
@@ -226,9 +71,7 @@
             </ul>
           </li>
         </ul>
-        <div class="sidebar-footer text-bold">
-          <small>© 2025 FootNet Developers</small>
-        </div>
+        <div class="sidebar-footer text-bold"><small>© 2025 FootNet Developers</small></div>
       </div>
     </aside>
 
