--- a/output-files.html
+++ b/output-files.html
@@ -23,7 +23,7 @@
     .sidebar-nav li { margin: 5px 0; }
     .sidebar-nav a { text-decoration: none; color: #0066cc; }
     .sidebar-footer { margin-top: 20px; font-size: 12px; color: #555; }
-  .content { flex: 1; padding: 30px; max-width: 1500px; }
+  .content { flex: 1; padding: 30px; max-width: var(--max-content-width); box-sizing: border-box; }
     .row {display: flex; align-items: center; margin: 20px 0; flex-wrap: wrap;}
     /* Improve spacing for lists in the content area */
     .markdown-section ul li {margin: 10px 0; /* vertical spacing between bullets */}
@@ -48,7 +48,6 @@
       <h1 class="app-name">
         <div class="sidebar-logo">
           <a href="index.html"><img src="./figures/FootNet.png" alt="FootNet logo"></a>
-          <a class="app-name-link app-name-text" href="index.html"><span class="color-primary text-bold">FootNet</span> Project</a>
         </div>
       </h1>
       <div class="sidebar-nav">
