--- a/quick-start.html
+++ b/quick-start.html
@@ -24,7 +24,7 @@
     .sidebar-nav li { margin: 5px 0; }
     .sidebar-nav a { text-decoration: none; color: #0066cc; }
     .sidebar-footer { margin-top: 20px; font-size: 12px; color: #555; }
-  .content { flex: 1; padding: 30px; max-width: 1500px; }
+  .content { flex: 1; padding: 30px; max-width: var(--max-content-width); box-sizing: border-box; }
     /* Code block styling for better visibility */
     pre, code { font-family: Menlo, Monaco, 'Courier New', monospace; }
     pre { background: #f6f8fa; color: #0b0b0b; padding: 12px; border-radius: 6px; border: 1px solid #e1e4e8; overflow: auto; }
@@ -45,7 +45,6 @@
       <h1 class="app-name">
         <div class="sidebar-logo">
           <a href="index.html"><img src="./figures/FootNet.png" alt="FootNet logo"></a>
-          <a class="app-name-link app-name-text" href="index.html"><span class="color-primary text-bold">FootNet</span> Project</a>
         </div>
       </h1>
       <div class="sidebar-nav">
