--- a/training.html
+++ b/training.html
@@ -23,7 +23,7 @@
     .sidebar-nav li { margin: 5px 0; }
     .sidebar-nav a { text-decoration: none; color: #0066cc; }
     .sidebar-footer { margin-top: 20px; font-size: 12px; color: #555; }
-  .content { flex: 1; padding: 30px; max-width: 1500px; }
+  .content { flex: 1; padding: 30px; max-width: var(--max-content-width); box-sizing: border-box; }
   </style>
 </head>
 <body>
@@ -37,10 +37,9 @@
 
   <main class="layout">
     <aside class="sidebar">
-  <h1 class="app-name">
+    <h1 class="app-name">
     <div class="sidebar-logo">
       <a href="index.html"><img src="./figures/FootNet.png" alt="FootNet logo"></a>
-      <a class="app-name-link app-name-text" href="index.html"><span class="color-primary text-bold">FootNet</span> Project</a>
     </div>
   </h1>
       <div class="sidebar-nav">
