updated citation for FootNet v3 paper

--- a/resources.html
+++ b/resources.html
@@ -81,9 +81,12 @@
 
         <h2>References</h2>
 
-        <p>Dadheech, N. and Turner, A. J. (under review) Simulating out-of-sample atmospheric transport to enable flux inversions, 
+        <p>Dadheech, N. and Turner, A. J.: Simulating out-of-sample atmospheric transport to enable flux inversions, 
+          Atmospheric Chemistry and Physics, 26, 427–441, <a href="https://acp.copernicus.org/articles/26/427/2026/" 
+            target="_blank" rel="noopener">https://doi.org/10.5194/acp-26-427-2026.</a></p>
+        <!-- <p>Dadheech, N. and Turner, A. J. (under review) Simulating out-of-sample atmospheric transport to enable flux inversions, 
             EGUsphere [preprint], <a href="https://egusphere.copernicus.org/preprints/2025/egusphere-2025-3441/" 
-            target="_blank" rel="noopener">https://doi.org/10.5194/egusphere-2025-3441</a></p>
+            target="_blank" rel="noopener">https://doi.org/10.5194/egusphere-2025-3441</a></p> -->
 
         <p>Dadheech, N.*, He T.*, and Turner A.J. (2025),
             High-resolution greenhouse gas flux inversions using a machine learning surrogate model for atmospheric transport,
