updated text on resources.html

--- a/resources.html
+++ b/resources.html
@@ -83,7 +83,7 @@
 
         <p>Dadheech, N. and Turner, A. J.: Simulating out-of-sample atmospheric transport to enable flux inversions, 
           Atmospheric Chemistry and Physics, 26, 427–441, <a href="https://acp.copernicus.org/articles/26/427/2026/" 
-            target="_blank" rel="noopener">https://doi.org/10.5194/acp-26-427-2026.</a></p>
+            target="_blank" rel="noopener">https://doi.org/10.5194/acp-26-427-2026</a></p>
         <!-- <p>Dadheech, N. and Turner, A. J. (under review) Simulating out-of-sample atmospheric transport to enable flux inversions, 
             EGUsphere [preprint], <a href="https://egusphere.copernicus.org/preprints/2025/egusphere-2025-3441/" 
             target="_blank" rel="noopener">https://doi.org/10.5194/egusphere-2025-3441</a></p> -->
@@ -92,12 +92,12 @@
             High-resolution greenhouse gas flux inversions using a machine learning surrogate model for atmospheric transport,
             <i>Atmospheric Chemistry and Physics</i>, <i>25 (10)</i>, 5159-5174, 
             <a href="https://acp.copernicus.org/articles/25/5159/2025/" target="_blank" rel="noopener"> 
-                https://doi.org/10.5194/acp-25-5159-2025.</a></p>
+                https://doi.org/10.5194/acp-25-5159-2025</a></p>
         
         <p>He T.*, Dadheech, N.*, and Turner A.J. (2025),
              FootNet v1. 0: development of a machine learning emulator of atmospheric transport. <i>Geoscientific Model Development</i>, 
              <i>18 (5)</i>, 1661-1671, <a href="https://gmd.copernicus.org/articles/18/1661/2025/" target="_blank" rel="noopener">  
-                https://doi.org/10.1021/gmd-18-1661-2025.</a></p>
+                https://doi.org/10.1021/gmd-18-1661-2025</a></p>
 
       </article>
     </section>
