--- a/people.html
+++ b/people.html
@@ -58,7 +58,7 @@
             </ul>
           </li>
         </ul>
-        <div class="sidebar-footer text-bold"><small>© 2025 FootNet Developers</small></div>
+  <div class="sidebar-footer text-bold"><small>© 2026 FootNet Developers</small></div>
       </div>
     </aside>
 
@@ -145,7 +145,9 @@
         </div>
 
         <h3 style="margin-top:24px;">Acknowledgements</h3>
-        <p>We thank collaborators and contributors who provided data, code reviews, and testing support.</p>
+        <p>This work originated from research supported by the National Aeronautics and Space Administration 
+          (grant nos. 80NSSC22K1557 and 80NSSC21K1808) and Environmental Defense Fund. It has continued as part of the FETCH4 project and 
+          is supported by Schmidt Sciences through the VESRI program.</p>
       </article>
     </section>
   </main>
